--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-<h1>HHHHEEEETTTTTT</h1>   
+      <section class="hero-image">
+        <h1 class="hero-text"></h1>
+        My Scotland
+      </section>   
 </body>
 </html>
