--- a/Index.html
+++ b/Index.html
@@ -12,18 +12,34 @@
             My Scotland
         </h1> 
     </section>
+    <!--TWO COLUMN THING-->
+    <section class="two-column">
+      <div class="image">
+          <img src="./images/edinburgh-castle-959083_1280.jpg" alt="Edinburgh Castle">
+      </div>
+      <div class="info">
+       <h1>Edinburgh Castle</h1>
+       <p>Edinburgh Castle is a historic castle in Edinburgh, Scotland. It stands on Castle Rock, which has been occupied by humans since at least the Iron Age, although the nature of the early settlement is unclear.
+         There has been a royal castle on the rock since at least the reign of David I in the 12th century, and the site continued to be a royal residence until 1633.
+          From the 15th century, the castle's residential role declined, and by the 17th century it was principally used as military barracks with a large garrison.
+          Its importance as a part of Scotland's national heritage was recognised increasingly from the early 19th century onwards,
+          and various restoration programmes have been carried out over the past century and a half.</p>
+      </div>
+  </section>    
+    <!--TWO COLUMN THING-->
     <section class="two-column">
         <div class="image">
-            <img src="./images/edinburgh-castle-959083_1280.jpg" alt="">
+            <img src="./images/skye-540130_1280.jpg" alt="Isle of Skye">
         </div>
         <div class="info">
-         <h1>Edinburgh Castle</h1>
-         <p>Edinburgh Castle is a historic castle in Edinburgh, Scotland. It stands on Castle Rock, which has been occupied by humans since at least the Iron Age, although the nature of the early settlement is unclear.
-           There has been a royal castle on the rock since at least the reign of David I in the 12th century, and the site continued to be a royal residence until 1633.
-            From the 15th century, the castle's residential role declined, and by the 17th century it was principally used as military barracks with a large garrison.
-            Its importance as a part of Scotland's national heritage was recognised increasingly from the early 19th century onwards,
-            and various restoration programmes have been carried out over the past century and a half.</p>
+         <h1>The Isle of Skye</h1>
+         <p>The Isle of Skye, or simply Skye , is the largest and northernmost of the major islands in the Inner Hebrides of Scotland. The island's peninsulas radiate from a mountainous hub dominated by the Cuillin, 
+          the rocky slopes of which provide some of the most dramatic mountain scenery in the country. Although Sgitheanach has been suggested to describe a winged shape,
+           no definitive agreement exists as to the name's origins. The island has been occupied since the Mesolithic period, and over its history
+            has been occupied at various times by Celtic tribes including the Picts and the Gaels, Scandinavian Vikings, 
+            and most notably the powerful integrated Norse-Gaels clans of MacLeod and MacDonald.</p>
         </div>
-    </section>    
+    </section>  
+    <!--TWO COLUMN THING-->  
 </body>
 </html>
