--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
       <section class="hero-image">
-        <h1 class="hero-text"></h1>
+        <h1 class="hero-text">
             My Scotland
         </h1> 
     </section>
@@ -19,8 +19,7 @@
       </div>
       <div class="info">
        <h1>Edinburgh Castle</h1>
-       <p>Edinburgh Castle is a historic castle in Edinburgh, Scotland. It stands on Castle Rock, which has been occupied by humans since at least the Iron Age, although the nature of the early settlement is unclear.
-         There has been a royal castle on the rock since at least the reign of David I in the 12th century, and the site continued to be a royal residence until 1633.
+       <p>Edinburgh Castle is a historic castle in Edinburgh, Scotland. It stands on Castle Rock, which has been occupied by humans since at least the Iron Age, although the nature of the early settlement is unclear.There has been a royal castle on the rock since at least the reign of David I in the 12th century, and the site continued to be a royal residence until 1633.
           From the 15th century, the castle's residential role declined, and by the 17th century it was principally used as military barracks with a large garrison.
           Its importance as a part of Scotland's national heritage was recognised increasingly from the early 19th century onwards,
           and various restoration programmes have been carried out over the past century and a half.</p>
@@ -40,6 +39,51 @@
             and most notably the powerful integrated Norse-Gaels clans of MacLeod and MacDonald.</p>
         </div>
     </section>  
-    <!--TWO COLUMN THING-->  
+    <!--TWO COLUMN THING-->
+    <section class="two-column">
+        <div class="image">
+            <img src="images/oban-114173_1280.jpg" alt="oban">
+        </div>
+        <div class="info">
+         <h1>Oban</h1>
+         <p>Prior to the 19th century, the town itself supported very few households, sustaining only minor fishing, trading, shipbuilding and quarrying industries,
+             and a few hardy tourists.[8] The Renfrew trading company established a storehouse there around 1714, as a local outlet for its merchandise, but a custom-house
+              was not deemed necessary until 1736, with "Oban being reckoned a proper place for clearing out vessels for the herring fishery". The modern town of Oban grew up
+               around the distillery, which was founded there in 1794. A royal charter raised the town to a burgh of barony in 1811. Sir Walter Scott visited the area in 1814
+               , the year in which he published his poem The Lord of the Isles; interest in the poem brought many new visitors to the town. The town was made a Parliamentary Burgh
+                in 1833.</p>
+        </div>
+    </section>  
+    <!--TWO COLUMN THING-->
+    <section class="two-column">
+        <div class="image">
+            <img src="images/scottish-castle-967972_1280.jpg" alt="Loch Ness">
+        </div>
+        <div class="info">
+         <h1>Loch Ness</h1>
+         <p>Loch Ness is a large freshwater loch in the Scottish Highlands extending for approximately 37 kilometres (23 miles) southwest of Inverness. 
+            It takes its name from the River Ness, which flows from the northern end. Loch Ness is best known for claimed sightings of the cryptozoological Loch Ness Monster,
+             also known affectionately as "Nessie" (Scottish Gaelic: Niseag). It is one of a series of interconnected, murky bodies of water in Scotland; its water visibility
+              is exceptionally low due to the high peat content of the surrounding soil. At 56 km2 (22 sq mi), Loch Ness is the second-largest Scottish loch by surface area
+               after Loch Lomond, but due to its great depth it is the largest by volume in Great Britain. Its deepest point is 230 metres (126 fathoms; 755 feet), making it
+                the second deepest loch in Scotland after Loch Morar. </p>
+        </div>
+    </section>  
+    <!--TWO COLUMN THING-->
+    <section class="two-column">
+        <div class="image">
+            <img src="images/scottish-castle-967972_1280.jpg" alt="Loch Ness">
+        </div>
+        <div class="info">
+         <h1>Loch Ness</h1>
+         <p>Loch Ness is a large freshwater loch in the Scottish Highlands extending for approximately 37 kilometres (23 miles) southwest of Inverness. 
+            It takes its name from the River Ness, which flows from the northern end. Loch Ness is best known for claimed sightings of the cryptozoological Loch Ness Monster,
+             also known affectionately as "Nessie" (Scottish Gaelic: Niseag). It is one of a series of interconnected, murky bodies of water in Scotland; its water visibility
+              is exceptionally low due to the high peat content of the surrounding soil. At 56 km2 (22 sq mi), Loch Ness is the second-largest Scottish loch by surface area
+               after Loch Lomond, but due to its great depth it is the largest by volume in Great Britain. Its deepest point is 230 metres (126 fathoms; 755 feet), making it
+                the second deepest loch in Scotland after Loch Morar. </p>
+        </div>
+    </section>  
+    <!--TWO COLUMN THING-->    
 </body>
-</html>
+</html>s
