--- a/Index.html
+++ b/Index.html
@@ -72,16 +72,16 @@
     <!--TWO COLUMN THING-->
     <section class="two-column">
         <div class="image">
-            <img src="images/scottish-castle-967972_1280.jpg" alt="Loch Ness">
+            <img src="images/eilean-donan-5570684_1280.jpg" alt="Eilean Donan">
         </div>
         <div class="info">
-         <h1>Loch Ness</h1>
-         <p>Loch Ness is a large freshwater loch in the Scottish Highlands extending for approximately 37 kilometres (23 miles) southwest of Inverness. 
-            It takes its name from the River Ness, which flows from the northern end. Loch Ness is best known for claimed sightings of the cryptozoological Loch Ness Monster,
-             also known affectionately as "Nessie" (Scottish Gaelic: Niseag). It is one of a series of interconnected, murky bodies of water in Scotland; its water visibility
-              is exceptionally low due to the high peat content of the surrounding soil. At 56 km2 (22 sq mi), Loch Ness is the second-largest Scottish loch by surface area
-               after Loch Lomond, but due to its great depth it is the largest by volume in Great Britain. Its deepest point is 230 metres (126 fathoms; 755 feet), making it
-                the second deepest loch in Scotland after Loch Morar. </p>
+         <h1>Eilean Donan</h1>
+         <p>Eilean Donan (Scottish Gaelic: Eilean Donnain) is a small tidal island situated at the confluence of three sea lochs (Loch Duich, Loch Long and Loch Alsh) in the western Highlands of Scotland,
+             about 1 kilometre from the village of Dornie. It is connected to the mainland by a footbridge that was installed early in the 20th century
+              and is dominated by a picturesque castle that frequently appears in photographs, film and television. The island's original castle was built in the
+               thirteenth century; it became a stronghold of the Clan Mackenzie and their allies, the Clan MacRae. However, in response to the Mackenzies' involvement
+                in the Jacobite rebellions early in the 18th century, government ships destroyed the castle in 1719. The present-day castle is
+                 Lieutenant-Colonel John Macrae-Gilstrap's 20th-century reconstruction of the old castle.</p>
         </div>
     </section>  
     <!--TWO COLUMN THING-->    
