--- a/Index.html
+++ b/Index.html
@@ -84,6 +84,20 @@
                  Lieutenant-Colonel John Macrae-Gilstrap's 20th-century reconstruction of the old castle.</p>
         </div>
     </section>  
-    <!--TWO COLUMN THING-->    
+    <!--TWO COLUMN ender-->  
+    <section class="three-column">
+       <div> class="card">
+            <img src="./images/haggis.jpg" alt="haggis">
+            <h2 class="card-text">Haggis</h2>
+       </div>
+       <div> class="card">
+            <img src="./images/haggis.jpg" alt="haggis">
+            <h2 class="card-text">Haggis</h2>
+       </div>
+       <div> class="card">
+            <img src="./images/haggis.jpg" alt="haggis">
+            <h2 class="card-text">Haggis</h2>   
+       </div>     
+    </section> 
 </body>
-</html>s
+</html>
