--- a/Index.html
+++ b/Index.html
@@ -86,17 +86,17 @@
     </section>  
     <!--TWO COLUMN ender-->  
     <section class="three-column">
-       <div> class="card">
+       <div class="card">
             <img src="./images/haggis.jpg" alt="haggis">
             <h2 class="card-text">Haggis</h2>
        </div>
-       <div> class="card">
-            <img src="./images/haggis.jpg" alt="haggis">
-            <h2 class="card-text">Haggis</h2>
+       <div class="card">
+            <img src="./images/bagpipes.jpg" alt="haggis">
+            <h2 class="card-text">Backpipes</h2>
        </div>
-       <div> class="card">
-            <img src="./images/haggis.jpg" alt="haggis">
-            <h2 class="card-text">Haggis</h2>   
+       <div class="card">
+            <img src="./images/kilt.jpg" alt="haggis">
+            <h2 class="card-text">Kilt</h2>   
        </div>     
     </section> 
 </body>
